build: configure local Spark runtime